feat: add regex for failed XML-RPC auth to both hard and soft conf files

--- a/config/filters/wordpress-hard.conf
+++ b/config/filters/wordpress-hard.conf
@@ -28,6 +28,7 @@ failregex = ^%(__prefix_line)sAuthentication attempt for unknown user .* from <H
             ^%(__prefix_line)sPingback error .* generated from <HOST>$
             ^%(__prefix_line)sSpammed comment from <HOST>$
             ^%(__prefix_line)sXML-RPC multicall authentication failure from <HOST>$
+			^%(__prefix_line)sXML-RPC authentication failure from <HOST>$
 
 # Option:  ignoreregex
 # Notes.:  regex to ignore. If this regex matches, the line is ignored.
