--- a/config/filters/wordpress-soft.conf
+++ b/config/filters/wordpress-soft.conf
@@ -23,6 +23,7 @@ _daemon = wp
 # Values:  TEXT
 #
 failregex = ^%(__prefix_line)sAuthentication failure for .* from <HOST>$
+			^%(__prefix_line)sXML-RPC authentication failure from <HOST>$
 
 # Option:  ignoreregex
 # Notes.:  regex to ignore. If this regex matches, the line is ignored.
